# m1-ctrl

./: .gitignore  Cargo.toml  README.md  build.rs
actuators/: Cargo.toml
actuators/center/: Cargo.toml  build.rs
actuators/center/src/: lib.rs
actuators/outer/: Cargo.toml  build.rs
actuators/outer/src/: lib.rs
actuators/src/: lib.rs
calib_dt/: m1_ctrl_dt.mat
hardpoints/: Cargo.toml  build.rs
hardpoints/src/: lib.rs
m1-simulink-models/: M1DCS_2_rust.slx  load_M1DCS_data.m
src/: actors_interface.rs  hardpoints.rs  hp_load_cell.rs  lib.rs  model.rs
src/actuators/: Makefile  mod.rs
src/actuators/center/: M1SA_Control_CS.c  M1SA_Control_CS.h  M1SA_Control_CS_data.c  M1SA_Control_CS_private.h  M1SA_Control_CS_types.h  M1SA_F_Control_CS.c  M1SA_F_Control_CS.h  M1SA_F_Control_CS_data.c  M1SA_F_Control_CS_private.h  M1SA_F_Control_CS_types.h  rtwtypes.h
src/actuators/outer/: M1SA_Control_OA.c  M1SA_Control_OA.h  M1SA_Control_OA_data.c  M1SA_Control_OA_private.h  M1SA_Control_OA_types.h  M1SA_F_Control_OA.c  M1SA_F_Control_OA.h  M1SA_F_Control_OA_data.c  M1SA_F_Control_OA_private.h  M1SA_F_Control_OA_types.h  rtwtypes.h
src/actuators/segment/: M1SA_Control_S.c  M1SA_Control_S.h  M1SA_Control_S_data.c  M1SA_Control_S_private.h  M1SA_Control_S_types.h  mod.rs  rtwtypes.h
src/actuators/segment1/: M1SA_Control_S1.c  M1SA_Control_S1.h  M1SA_Control_S1_data.c  M1SA_Control_S1_private.h  M1SA_Control_S1_types.h  M1SA_F_Control_OA_data.c  M1SA_F_Control_OA_private.h  M1SA_F_Control_S1.c  M1SA_F_Control_S1.h  M1SA_F_Control_S1_data.c  M1SA_F_Control_S1_private.h  M1SA_F_Control_S1_types.h  ert_main.c  mod.rs  rtwtypes.h
src/actuators/segment2/: M1SA_Control_S2.c  M1SA_Control_S2.h  M1SA_Control_S2_data.c  M1SA_Control_S2_private.h  M1SA_Control_S2_types.h  M1SA_F_Control_S2.c  M1SA_F_Control_S2.h  M1SA_F_Control_S2_data.c  M1SA_F_Control_S2_private.h  M1SA_F_Control_S2_types.h  mod.rs  rtwtypes.h
src/actuators/segment3/: M1SA_Control_S3.c  M1SA_Control_S3.h  M1SA_Control_S3_data.c  M1SA_Control_S3_private.h  M1SA_Control_S3_types.h  M1SA_F_Control_S3.c  M1SA_F_Control_S3.h  M1SA_F_Control_S3_data.c  M1SA_F_Control_S3_private.h  M1SA_F_Control_S3_types.h  mod.rs  rtwtypes.h
src/actuators/segment4/: M1SA_Control_S4.c  M1SA_Control_S4.h  M1SA_Control_S4_data.c  M1SA_Control_S4_private.h  M1SA_Control_S4_types.h  M1SA_F_Control_S4.c  M1SA_F_Control_S4.h  M1SA_F_Control_S4_data.c  M1SA_F_Control_S4_private.h  M1SA_F_Control_S4_types.h  mod.rs  rtwtypes.h
src/actuators/segment5/: M1SA_Control_S5.c  M1SA_Control_S5.h  M1SA_Control_S5_data.c  M1SA_Control_S5_private.h  M1SA_Control_S5_types.h  M1SA_F_Control_S5.c  M1SA_F_Control_S5.h  M1SA_F_Control_S5_data.c  M1SA_F_Control_S5_private.h  M1SA_F_Control_S5_types.h  mod.rs  rtwtypes.h
src/actuators/segment6/: M1SA_Control_S6.c  M1SA_Control_S6.h  M1SA_Control_S6_data.c  M1SA_Control_S6_private.h  M1SA_Control_S6_types.h  M1SA_F_Control_S6.c  M1SA_F_Control_S6.h  M1SA_F_Control_S6_data.c  M1SA_F_Control_S6_private.h  M1SA_F_Control_S6_types.h  mod.rs  rtwtypes.h
src/actuators/segment7/: M1SA_Control_S7.c  M1SA_Control_S7.h  M1SA_Control_S7_data.c  M1SA_Control_S7_private.h  M1SA_Control_S7_types.h  M1SA_F_Control_CS.c  M1SA_F_Control_CS.h  M1SA_F_Control_CS_data.c  M1SA_F_Control_S7.c  M1SA_F_Control_S7.h  M1SA_F_Control_S7_data.c  M1SA_F_Control_S7_private.h  M1SA_F_Control_S7_types.h  ert_main.c  mod.rs  rtwtypes.h
src/cg_controller/: M1OFL_Control.c  M1OFL_Control.h  M1OFL_Control_data.c  M1OFL_Control_private.h  M1OFL_Control_types.h  mod.rs  rtwtypes.h
src/hardpoints/: loadcell.rs
src/hp_dynamics/: HP_dyn_dTF.c  HP_dyn_dTF.h  HP_dyn_dTF_private.h  HP_dyn_dTF_types.h  M1_HP_Dyn.c  M1_HP_Dyn.h  M1_HP_Dyn_data.c  M1_HP_Dyn_private.h  M1_HP_Dyn_types.h  mod.rs  rtwtypes.h
src/hp_load_cells/: M1_HP_loadcells.c  M1_HP_loadcells.h  M1_HP_loadcells_private.h  M1_HP_loadcells_types.h  mod.rs  rtwtypes.h
src/local_controller/: mod.rs
tests/: fem_data.rs
tests/m1/: main.rs
tests/segment/: main.rs
tests/segment_dynamic/: main.rs
tests/segment_dynamic_with_mat/: main.rs
tests/segment_static/: main.rs
