[package]
name = "gmt_m1-ctrl"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[workspace]
members = ["hardpoints", "actuators", "actuators/center", "actuators/outer"]

[workspace.package]
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope primary mirror control system"
repository = "https://github.com/rconan/m1-ctrl"
documentation = "https://docs.rs/gmt_m1-ctrl"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[workspace.dependencies]
bindgen = "0.63.0"
cc = "1.0.68"
matio-rs = "1.1.2"
gmt_dos-actors = { version = "5.0.1", default-features = false }
dos-clients_io = { version = "1.0.0", package = "gmt_dos-clients_io" }

[dependencies]
dos-clients_io.workspace = true
gmt_dos-actors = { workspace = true, default-features = false }
hardpoints-dynamics = { version = "0.1.0", path = "hardpoints", package = "gmt_m1-ctrl_hardpoints-dynamics" }
actuators = { version = "0.1.0", path = "actuators", package = "gmt_m1-ctrl_actuators" }
nalgebra = "0.31.0"
gmt-fem = { version = "1.2.0", optional = true }

[dev-dependencies]
anyhow = "1.0.68"
matio-rs = { workspace = true, features = ["nalgebra"] }
tokio = { version = "1.24.2", features = ["test-util", "rt-multi-thread"] }

[features]
default = ["full"]
full = ["gmt-fem"]

[package.metadata.docs.rs]
no-default-features = true
