[package]
name = "gmt_m1-ctrl"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[workspace]
members = ["hardpoints", "actuators/center", "actuators/outer"]

[workspace.package]
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope primary mirror control system"
repository = "https://github.com/rconan/m1-ctrl"
documentation = "https://docs.rs/gmt_m1-ctrl"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[workspace.dependencies]
bindgen = "0.63.0"
cc = "1.0.68"
matio-rs = "1.1.2"
