[workspace]
members = ["hardpoints", "actuators/center", "actuators/outer"]

[workspace.package]
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "Giant Magellan Telescope primary mirror control system"
repository = "https://github.com/rconan/m1-ctrl"
documentation = "https://docs.rs/gmt_m1-ctrl"
readme = "README.md"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

[workspace.dependencies]
matio-rs = "1.1.2"
paste = "1.0.12"
simulink-rs = "1.0.0"