[package]
name = "gmt_m1-ctrl_actuators"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
center = { version = "0.1.0", path = "center", package = "gmt_m1-ctrl_center-actuators" }
outer = { version = "0.1.0", path = "outer", package = "gmt_m1-ctrl_outer-actuators" }
gmt_dos-actors = { workspace = true, default-features = false }
dos-clients_io.workspace = true

[dev-dependencies]
matio-rs.workspace = true
