[package]
name = "gmt_m1-ctrl_hardpoints-dynamics"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true

[build-dependencies]
cc.workspace = true
bindgen.workspace = true

[dev-dependencies]
matio-rs.workspace = true
